--- a/view.ui
+++ b/view.ui
@@ -72,7 +72,7 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-image: url(:/img/res/soundon.png);</string>
+       <string notr="true">background-image: url(:/img/res/soundoff.png);</string>
       </property>
       <property name="text">
        <string/>
